# submission

./: CMakeLists.txt  README.md  actions.h  cam.h  camh.cpp  chunk.h  chunk_set.h  common.h  eval.cpp  functions.h  graph_utils.h  mcamh.cpp  mst.cpp  mstt.cpp  msttmax.cpp  msttthm10.cpp  rec.h  solution.h  spt.cpp  stupid.cpp  utils.h
graphs/: Hypercube.txt  JellyFish.txt  SWDCRing.txt
utils/: gen_all_test.py  shell.nix  sim_ng.py  testgen.py  testrun.py
